[package]
name = "app-age"
version = "0.1.0"
edition = "2021"
authors = ["Nics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" } 
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" } 
include_gif = { git = "https://github.com/LedgerHQ/sdk_include_gif" }

[profile.release]
opt-level = 'z' 
lto = true

[package.metadata.nanos]
curve = ["secp256k1"]
flags = "0"
icon = "ferris.gif"
icon_small = "icon_small.gif"
name = "Age identity"
path = ["m/6383461'"]
