[package]
name = "app-age"
version = "0.1.1"
edition = "2021"
authors = ["Nics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ledger-sdk-sys = { git = "https://github.com/LedgerHQ/secure-sdk-rust" }
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" }
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" }
include_gif = { git = "https://github.com/LedgerHQ/sdk_include_gif" }

[profile.release]
opt-level = 'z'
lto = true

[package.metadata.ledger]
curve = ["secp256k1"]
flags = "0"
name = "Age identity"
path = ["6383461'"]
nanox.icon = "icon_small.gif"
nanosplus.icon = "icon_small.gif"
